<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Inicial">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:baselineAligned="true">

                <ImageView
                    android:id="@+id/img_oferta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="150dp"
                    android:adjustViewBounds="false"
                    android:fadingEdge="none"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo_home_guanabara"
                    android:theme="@style/Base.TextAppearance.AppCompat.Display4" />

                <ImageView
                    android:id="@+id/image_github"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="right"
                    android:src="@drawable/icon_1080x1080"
                    android:visibility="gone" />

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <ListView
            android:id="@+id/listaEmpresas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:divider="@android:drawable/divider_horizontal_dim_dark"
            android:scrollbars="none"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardTexto" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toTopOf="@+id/cardTexto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    style="@style/CardView.SS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:id="@+id/container_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/text_label_page_indicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="Page Indicator: " />

                            <Spinner
                                android:id="@+id/spinner_page_indicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/text_label_page_indicator" />
                        </RelativeLayout>

                        <ss.com.bannerslider.Slider
                            android:id="@+id/banner_slider1"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_below="@id/container_spinner"
                            android:scaleType="centerInside"
                            app:slider_emptyView="@layout/layout_empty_view"
                            app:slider_indicatorSize="10dp"
                            app:slider_loopSlides="true"
                            app:slider_selectedSlideIndicator="@drawable/indicator_circle_selected"
                            app:slider_unselectedSlideIndicator="@drawable/indicator_circle_unselected" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/banner_slider1"
                            android:orientation="vertical"
                            android:padding="12dp"
                            android:visibility="gone">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="70dp">

                                <ImageView
                                    android:id="@+id/image_logo"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:layout_alignParentLeft="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginRight="@dimen/standard_margin"
                                    android:src="@drawable/ic_setting_2" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="8dp"
                                    android:layout_toRightOf="@id/image_logo"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Customization"
                                        android:textColor="@android:color/black" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="2dp"
                                        android:text="you can test various settings from here" />
                                </LinearLayout>

                            </RelativeLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginBottom="16dp"
                                android:background="#ddd" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/banner_slider_settings_margin"
                                android:layout_marginRight="@dimen/banner_slider_settings_margin"
                                android:layout_marginBottom="@dimen/standard_margin">

                                <TextView
                                    android:id="@+id/text_label_interval"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_centerVertical="true"
                                    android:text="@string/label_interval" />

                                <SeekBar
                                    android:id="@+id/seekbar_interval"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_toEndOf="@id/text_label_interval" />


                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/banner_slider_settings_margin"
                                android:layout_marginRight="@dimen/banner_slider_settings_margin"
                                android:layout_marginBottom="@dimen/standard_margin">

                                <TextView
                                    android:id="@+id/text_label_indicator_size"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginBottom="@dimen/standard_margin"
                                    android:text="@string/label_indicator_size" />

                                <SeekBar
                                    android:id="@+id/seekbar_indicator_size"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_toEndOf="@id/text_label_indicator_size" />


                            </RelativeLayout>

                            <androidx.appcompat.widget.SwitchCompat
                                android:id="@+id/checkbox_loop_slides"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/banner_slider_settings_margin"
                                android:layout_marginRight="@dimen/banner_slider_settings_margin"
                                android:layout_marginBottom="@dimen/standard_margin"
                                android:text="@string/label_loop_slides"
                                android:textColor="@color/holo_gray" />

                            <androidx.appcompat.widget.SwitchCompat
                                android:id="@+id/checkbox_animate_indicators"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/banner_slider_settings_margin"
                                android:layout_marginRight="@dimen/banner_slider_settings_margin"
                                android:layout_marginBottom="@dimen/standard_margin"
                                android:text="@string/label_animate_indicators"

                                android:textColor="@color/holo_gray" />

                            <androidx.appcompat.widget.SwitchCompat
                                android:id="@+id/checkbox_hide_indicators"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/banner_slider_settings_margin"
                                android:layout_marginRight="@dimen/banner_slider_settings_margin"
                                android:text="@string/label_hide_indicators"

                                android:textColor="@color/holo_gray" />

                        </LinearLayout>
                    </RelativeLayout>


                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTexto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:visibility="visible"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toTopOf="@+id/listaEmpresas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="São várias lojas, cada uma com uma oferta especial para você!"
                    android:textAlignment="center"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textSize="19sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/content_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="gone"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>